fix overflow

--- a/africa-ports/css/africaPorts.css
+++ b/africa-ports/css/africaPorts.css
@@ -175,6 +175,10 @@ header p {
     display:block
   }
 
+  body > section {
+  height:95vh
+}
+
   aside.toolbox .ui:not(:checked) ~ .box {
     display: none;
   }
